--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Aleksej Kamynin <zendzirou@gmail.com> (http://bubujka.org/)",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.10.6",
+    "sprintf-js": "^1.0.3",
     "tinygradient": "^0.3.0",
     "toggl-stats": "0.0.1",
     "underscore": "^1.8.3"
