--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "toggl-stats": "0.2.0",
     "underscore": "^1.8.3",
     "untildify": "^2.1.0"
+  },
+  "devDependencies": {
+    "node-notifier": "4.6.1"
   }
 }
